# rock-paper-scissors

./: CMakeLists.txt  LICENSE  README.md  gleam.toml  manifest.toml
backup.bak/: CMakeLists.txt
backup.bak/src/: computer.c  main.c  move.c  move.h  player.c  player.h
src/: computer.h  main.c  player.c  rock_paper_scissors.gleam
